force-app/main/default/objects/Lead/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <inlineHelpText>Entered before Leadconversion with the Date Planned for 1st Meeting</inlineHelpText>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>