force-app/main/default/objects/Lead/fields/Backlog_Reason__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Reason__c</fullName>
    <label>Frozen Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>other priorities</fullName>
            </value>
            <value>
                <fullName>other partner</fullName>
            </value>
            <value>
                <fullName>too early / wrong time</fullName>
            </value>
            <value>
                <fullName>no interest</fullName>
            </value>
            <value>
                <fullName>wrong person</fullName>
            </value>
            <value>
                <fullName>not reachable</fullName>
            </value>
            <value>
                <fullName>no capacity</fullName>
            </value>
            <value>
                <fullName>wrong company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>