force-app/main/default/objects/Lead/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dani</fullName>
            </value>
            <value>
                <fullName>Jörg Trouvain à CH/DE</fullName>
            </value>
            <value>
                <fullName>Christoph Richterich à weltweit</fullName>
            </value>
            <value>
                <fullName>Rudi Kobza à AT</fullName>
            </value>
            <value>
                <fullName>Sacha Bär à CH</fullName>
            </value>
            <value>
                <fullName>Standard Mail Campaign</fullName>
            </value>
            <value>
                <fullName>Mail Campaign - Advent</fullName>
            </value>
            <value>
                <fullName>Call Center Nils</fullName>
            </value>
            <value>
                <fullName>Jens</fullName>
            </value>
            <value>
                <fullName>Felix</fullName>
            </value>
            <value>
                <fullName>DMEXCO</fullName>
            </value>
            <value>
                <fullName>Web Summit</fullName>
            </value>
            <value>
                <fullName>Digital Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>