force-app/main/default/objects/Lead/fields/Converting_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Converting_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converting Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Converting Campaign)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>