force-app/main/default/objects/Lead/fields/Data_Loader__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Loader</label>
    <type>Checkbox</type>
</CustomField>