force-app/main/default/objects/Lead/fields/Direkte_Telefonnummer_del__c.field-meta.xml
<CustomField>
    <fullName>Direkte_Telefonnummer_del__c</fullName>
    <inlineHelpText>This field is used as reference with the new field which is editable</inlineHelpText>
    <label>Direkte Telefonnummer (old)</label>
    <type>Phone</type>
</CustomField>