force-app/main/default/objects/Lead/fields/Handy_Nummer_del__c.field-meta.xml
<CustomField>
    <fullName>Handy_Nummer_del__c</fullName>
    <inlineHelpText>This field is used as reference with the new field which is editable</inlineHelpText>
    <label>Handy Nummer (old)</label>
    <type>Phone</type>
</CustomField>