force-app/main/default/objects/Lead/fields/Industry2__c.field-meta.xml
<CustomField>
    <fullName>Industry2__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_2_0</valueSetName>
    </valueSet>
</CustomField>