force-app/main/default/objects/Lead/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <label>Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Industry_Group_2_0</valueSetName>
    </valueSet>
</CustomField>