force-app/main/default/objects/Lead/fields/Languague__c.field-meta.xml
<CustomField>
    <fullName>Languague__c</fullName>
    <label>Languague</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>flair__Language</valueSetName>
    </valueSet>
</CustomField>