force-app/main/default/objects/Lead/fields/Lead_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>