force-app/main/default/objects/Lead/fields/LinkedIn_Profil__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profil__c</fullName>
    <label>LinkedIn Profil</label>
    <type>Url</type>
</CustomField>