force-app/main/default/objects/Lead/fields/Opted_In__c.field-meta.xml
<CustomField>
    <fullName>Opted_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted-In</label>
    <type>Checkbox</type>
</CustomField>