force-app/main/default/objects/Lead/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Industry_2_0</valueSetName>
    </valueSet>
</CustomField>