force-app/main/default/objects/Lead/recordTypes/Cold_Calling.recordType-meta.xml
<RecordType>
    <fullName>Cold_Calling</fullName>
    <active>true</active>
    <businessProcess>Cold Calling</businessProcess>
    <label>Cold Calling</label>
</RecordType>