force-app/main/default/objects/Lead/recordTypes/Mailing_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Mailing_Campaign</fullName>
    <active>true</active>
    <businessProcess>Mailing Campaigns</businessProcess>
    <label>Mailing Campaign</label>
</RecordType>