force-app/main/default/objects/Lead/validationRules/Converted_RequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_RequiredFields</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Converted&quot;),
OR(
  ISBLANK( TEXT( Appointment_Date__c  )),
ISBLANK( Email ),
ISBLANK( TEXT(Languague__c  )),
ISBLANK( TEXT(   Industry_Level_2__c )),
ISBLANK( TEXT(  Headcount__c    )),
ISBLANK( Country ),
ISBLANK( TEXT( LeadSource ))
)
)</errorConditionFormula>
    <errorMessage>Please fill in all required fields in order to convert the lead:
Appointment Date, E-Mail, Country, Lead Source, Industry, Language and Headcount</errorMessage>
</ValidationRule>