force-app/main/default/objects/Lead/validationRules/Follow_Up_RequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_Up_RequiredFields</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Follow Up&quot;),
OR(

ISBLANK( Email ),
ISBLANK( TEXT(Languague__c  )),
ISBLANK( TEXT(   Industry_Level_2__c )),
ISBLANK( Country ),
ISBLANK( TEXT( LeadSource ))
)
)</errorConditionFormula>
    <errorMessage>E-Mail, Country, Lead Source, Language, Industry is missing</errorMessage>
</ValidationRule>