force-app/main/default/objects/Lead/validationRules/Frozen_Backlog_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Frozen_Backlog_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Frozen&quot;),
ISBLANK( TEXT(  Backlog_Reason__c  )),
ISBLANK( TEXT(Languague__c )))</errorConditionFormula>
    <errorMessage>Please select a Frozen Reason and Language</errorMessage>
</ValidationRule>