force-app/main/default/objects/Lead/validationRules/In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Progress</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;In Progress&quot;),
OR(
ISBLANK( TEXT(   Industry_Level_2__c )),
ISBLANK( Country ),
ISBLANK( TEXT( LeadSource ))
)
)</errorConditionFormula>
    <errorMessage>Industry, Country, Lead Source is missing</errorMessage>
</ValidationRule>