force-app/main/default/objects/Lead/validationRules/Ready_to_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_to_Call</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Ready to Call&quot;),
OR(
ISBLANK( TEXT(   Industry_Level_2__c )),
ISBLANK( Country ),
ISBLANK( TEXT( LeadSource ))
)
)</errorConditionFormula>
    <errorMessage>Industry, Country, Lead Source is missing</errorMessage>
</ValidationRule>