force-app/main/default/objects/Lead/listViews/All_Leads_Mateo.listView-meta.xml
<ListView>
    <fullName>All_Leads_Mateo</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Languague__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Backlog_Reason__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads - Company</label>
</ListView>