force-app/main/default/objects/Lead/listViews/Leads_Noah_New.listView-meta.xml
<ListView>
    <fullName>Leads_Noah_New</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>jens</value>
    </filters>
    <label>Leads - Noah - New</label>
</ListView>